@@ -6,6 +6,9 @@ git-annex (0.20110326) UNRELEASED; urgency=low
   * Provide a less expensive version of `git annex copy --to`, enabled
     via --fast. This assumes that location tracking information is correct,
     rather than contacting the remote for every file.
+  * Bugfix: Keys could be received into v1 annexes from v2 annexes, via
+    v1 git-annex-shell. This results in some oddly named keys in the v1
+    annex. Recognise and fix those keys when upgrading, instead of crashing.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 26 Mar 2011 14:36:16 -0400
 
